# Moveit_config

./: CMakeLists.txt  Error_Stl.txt  README.md  To_Do.txt  To_do  package.xml
boxy_moveit_config/: .setup_assistant  .setup_assistant~  CMakeLists.txt  package.xml  package.xml~
boxy_moveit_config/Boxy_neck/: Boxy_neck.pro
boxy_moveit_config/config/: boxy_description.srdf  boxy_description.srdf~  boxy_description_bringup.srdf  controllers (copy).yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  ompl_planning.yaml~  sensors_rgbd.yaml
boxy_moveit_config/launch/: boxy_description_moveit_controller_manager.launch.xml  boxy_description_moveit_controller_manager.launch.xml~  boxy_description_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_mine 2.launch~  move_group_mine.launch  move_group_mine.launch~  move_group_mine2.launch  move_group_mine3.launch  move_neck.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test1.launch  trajectory_execution.launch.xml  ur3_ros_control_modified.launch  warehouse.launch
boxy_moveit_config/src/: init_move_group_interface.py  kinect_controller.py  kinect_controller2.py  kinect_planner.py  kinect_planner2.py  move_group_interface.py  (+4 more)
(+43 files in other folders)
